--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,8 +3,9 @@ doctype html
 head
   title Drinkalculator
   = stylesheet_link_tag "application", media: "all"
-  =javascript_include_tag "application"
+  = javascript_include_tag "application"
   = csrf_meta_tags
+  link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet"
 
 body
   == yield
