--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,8 @@ body
     div id="footer"
       div class="chuck-footer"
         p
-          a href="/privacy" Privacy Policy &bull;
-          a href="/terms" Terms of use &bull;
-          | 2014 Drinkalculator &copy;
+          = link_to "Privacy Policy", privacy_url
+          | &bull;
+          = link_to "Terms and Conditions", terms_url
+          | &bull;
+          | &copy; 2014 Drinkalculator
