--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,32 +1,24 @@
 style html, body {background: url("http://www.sevva.hk/images/about/terrace/terrace_seaview.jpg") no-repeat center center fixed; background-size:cover;}
 
-main role="main" class="container"
-  div class="row"
-    div class="col-md-4 col-md-offset-4"
-      form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
-        fieldset
+= form_for :user, url: login_url, html: { id: "loginform" } do |f|
+  fieldset
+    main role="main" class="container"
+      div class="row"
+        div class="col-md-4 col-md-offset-4"
+          form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
+            legend class="page-header"
+              h2 Please Sign in
 
-          legend class="page-header"
-            h2 Please Sign in
+            .form-group
+              / = f.label :email, class: "col-md-1 control-label"
+              div class="col-md-12"
+                = f.text_field :email, class: "form-control input-md", placeholder: "Email Address", id: "user_email"
 
-          div class="form-group"
-            label for="user_email" class="col-md-1 control-label" Email
-            div class="col-md-12"
-              input type="text" id="user_email" name="user[email]" placeholder="Email Address" class="form-control input-md"
+            .form-group
+              / = f.label :password, class: "col-md-1 control-label"
+              div class="col-md-12"
+                = f.password_field :password, class: "form-control input-md", placeholder: "Password", id: "user_password"
 
-          div class="form-group"
-            label for="user_password" class="col-md-1 control-label" Password
-            div class="col-md-12"
-              input type="password" id="user_password" name="user[password]" placeholder="Password" class="form-control input-md"
-
-          div class="form-group"
-            div class="col-md-12"
-              input type="submit" value="Sign In" class="btn btn-success col-md-12"
-
-p
-  | Hi there (form code here)
-
-ol
-  - @users.each do |user|
-    li
-      = user.email
+            div class="form-group"
+              div class="col-md-12"
+                = f.submit "Sign In", class: "btn btn-success col-md-12"
