Added a redirect unless current_user

--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,1 +1,8 @@
-style html, body {background: url("http://www.sevva.hk/images/about/terrace/terrace_seaview.jpg") no-repeat center center fixed; background-size:cover;}
+style html, body {background: url("http://www.sevva.hk/images/about/terrace/terrace_seaview.jpg") no-repeat center center fixed; background-size:cover;} p {color: white;}
+
+br
+br
+br
+br
+
+p Welcome #{@current_user.email}
