Added og out message

--- a/app/views/session/new.html.slim
+++ b/app/views/session/new.html.slim
@@ -1,4 +1,4 @@
-style html, body {background: url("http://www.sevva.hk/images/about/terrace/terrace_seaview.jpg") no-repeat center center fixed; background-size:cover;}
+style html, body {background: url("http://www.sevva.hk/images/about/terrace/terrace_seaview.jpg") no-repeat center center fixed; background-size:cover; color: white;}
 
 
 = form_for :user, url: login_url, html: { id: "loginform" } do |f|
@@ -10,6 +10,7 @@ style html, body {background: url("http://www.sevva.hk/images/about/terrace/terr
             legend class="page-header"
               h2 Please Sign in
 
+            .form-group = @messages
             .form-group
               / = f.label :email, class: "col-md-1 control-label"
               div class="col-md-12"
