Changed logout and error messages to noty

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ body
         h1 class="navbar-brand" Drinkalculator
 
     == yield
+    == render partial: "layouts/messages"
 
   div id="push"
 
