--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,8 +10,10 @@ head
 
 body
   div id="wrap"
-    header class="navbar navbar-inverse navbar-fixed-top" role="banner"
-      div class="container"
+    header.navbar.navbar-inverse.navbar-fixed-top role="banner"
+      .container
+        .pull-right
+          = link_to "Log Out", logout_url, method: :delete, class: "btn btn-danger logout-link" if current_user
         h1 class="navbar-brand" Drinkalculator
 
     == yield
