--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,8 +1,4 @@
-style html, body {background: url("http://www.sevva.hk/images/about/terrace/terrace_seaview.jpg") no-repeat center center fixed; background-size:cover;} p {color: white;}
-
-br
-br
-br
-br
-
-p Welcome #{@current_user.email}
+.main.container role="main"
+  div class="row"
+    div class="col-md-4 col-md-offset-4"
+      p Welcome #{@current_user.email}
