--- a/app/views/password/edit.html.slim
+++ b/app/views/password/edit.html.slim
@@ -3,10 +3,10 @@
   fieldset
     legend Choose a new password
     .form-group
-      = f.label :password, class: "sr-only"
+      / = f.label :password, class: "sr-only"
       = f.password_field :password, class: "form-control", placeholder: "New Password"
     .form-group
-      = f.label :password_confirmation, class: "sr-only"
+      / = f.label :password_confirmation, class: "sr-only"
       = f.password_field :password_confirmation, class: "form-control", placeholder: "Type it again"
     .form-group
       = f.submit "Update Password", class: "btn btn-success"
