Added icon files

--- a/app/views/password/edit.html.slim
+++ b/app/views/password/edit.html.slim
@@ -1,12 +1,28 @@
+style html, body {background: url("http://www.topwallpaperphoto.com/wp-content/uploads/2013/09/architecture-bar-beach.jpg") no-repeat center center fixed; background-size:cover; }
+
 = form_for @user, url: reset_url(@user.code), method: :patch, html: { id: "resetform"} do |f|
 
   fieldset
-    legend Choose a new password
-    .form-group
-      / = f.label :password, class: "sr-only"
-      = f.password_field :password, class: "form-control", placeholder: "New Password"
-    .form-group
-      / = f.label :password_confirmation, class: "sr-only"
-      = f.password_field :password_confirmation, class: "form-control", placeholder: "Type it again"
-    .form-group
-      = f.submit "Update Password", class: "btn btn-success"
+    main role="main" class="container"
+      div class="row"
+        div class="col-md-4 col-md-offset-4"
+          form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
+            legend class="page-header"
+              h2 Password reset
+
+            / legend Choose a new password
+            .form-group
+              / = f.label :password, class: "sr-only"
+              .col-md-12
+                = f.password_field :password, class: "form-control", placeholder: "New Password"
+
+            .form-group
+              / = f.label :password_confirmation, class: "sr-only"
+              .col-md-12
+                = f.password_field :password_confirmation, class: "form-control", placeholder: "Type it again"
+
+            .form-group
+              .col-md-12
+                = f.submit "Update Password", class: "btn btn-success col-md-12"
+
+
