--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ head
   title Drinkalculator
   link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet"
   = stylesheet_link_tag "application", media: "all"
+  = stylesheet_link_tag "fontello", media: "all"
   = javascript_include_tag "application"
   = csrf_meta_tags
   link href='http://fonts.googleapis.com/css?family=Revalia' rel='stylesheet' type='text/css'
