--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -2,3 +2,9 @@
   div class="row"
     div class="col-md-4 col-md-offset-4"
       p Welcome #{@current_user.email}
+
+div id="icons" class="container"
+  .row
+    .icon-glass
+    .icon-wine
+    .icon-beer
