--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,10 +1,35 @@
 .main.container role="main"
   div class="row"
-    div class="col-md-4 col-md-offset-4"
+    div class="col-md-4"
       p Welcome #{@current_user.email}
 
-div id="icons" class="container"
-  .row
-    .icon-glass
-    .icon-wine
-    .icon-beer
+  div id="icons"
+    .row
+      .col-md-4
+        .icon-beer
+      .col-md-4
+        .icon-wine
+      .col-md-4
+        .icon-glass
+
+
+    = form_for :user, url: login_url, html: { id: "loginform" } do |f|
+      fieldset
+        div class="row"
+          form id="login-form" method="post" action="#" accept-charset="UTF-8" class="form-horizontal"
+
+            .form-group
+              div class="col-md-4"
+                = f.text_field :email, class: "form-control input-md", placeholder: "Beer", id: "user_email"
+
+            .form-group
+              div class="col-md-4"
+                = f.text_field :email, class: "form-control input-md", placeholder: "Wine", id: "user_email"
+
+            .form-group
+              div class="col-md-4"
+                = f.text_field :email, class: "form-control input-md", placeholder: "Cocktails", id: "user_email"
+
+            div class="form-group"
+              div class="col-md-12"
+                = f.submit "Add drinks", class: "btn btn-success col-md-12"
