--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -20,15 +20,15 @@
 
             .form-group
               div class="col-md-4"
-                = f.text_field :beer, class: "form-control input-md", placeholder: "Beer", id: "beer"
+                = f.text_field :beer, class: "form-control input-md", placeholder: "Pints of beer"
 
             .form-group
               div class="col-md-4"
-                = f.text_field :wine, class: "form-control input-md", placeholder: "Wine", id: "wine"
+                = f.text_field :wine, class: "form-control input-md", placeholder: "Glasses of wine"
 
             .form-group
               div class="col-md-4"
-                = f.text_field :cocktail, class: "form-control input-md", placeholder: "Cocktail", id: "cocktail"
+                = f.text_field :cocktail, class: "form-control input-md", placeholder: "Cocktails"
 
             div class="form-group"
               div class="col-md-12"
