--- a/app/views/drinks/results.html.slim
+++ b/app/views/drinks/results.html.slim
@@ -8,7 +8,7 @@
     .row
       .col-md-4
         .icon-beer
-        p #{current_user.beer}
+        p #{current_user.beer.wk1}
       .col-md-4
         .icon-wine
         p #{current_user.wine}
