Added time to index

--- a/app/views/drinks/results.html.slim
+++ b/app/views/drinks/results.html.slim
@@ -8,7 +8,8 @@
     .row
       .col-md-4
         .icon-beer
-        p #{current_user.beer.wk1}
+        p Week 1 - #{current_user.beer.wk1}
+        p Week 2 - #{current_user.beer.wk2}
       .col-md-4
         .icon-wine
         p #{current_user.wine}
