--- a/app/views/drinks/results.html.slim
+++ b/app/views/drinks/results.html.slim
@@ -9,10 +9,11 @@
       .col-md-4
         .icon-beer
         p Week 1 - #{current_user.beer.wk1}
-        p Week 2 - #{current_user.beer.wk2}
+        p Week 2 - #{current_user.beer["03/21/2014"]}
       .col-md-4
         .icon-wine
-        p #{current_user.wine}
+        / p #{current_user.wine}
+        / p Week 2 - #{current_user.wine["03/21/2014"]}
       .col-md-4
         .icon-glass
         p #{current_user.cocktail}
