Added date string

--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,4 +1,4 @@
-/ style html, body {background: url("http://www.nightlifemagazine.nl/wp-content/uploads/2014/01/cocktails-wallpaper-1440x960.jpg") no-repeat center center fixed; background-size:cover;}
+style html, body {background: url("http://wallpapersus.com/wp-content/uploads/2012/11/Cocktails-Drinks.jpg") no-repeat center center fixed; background-size:cover;}
 
 .main.container.white_background role="main"
   div class="row"
