Added date picker

--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -16,7 +16,8 @@ style html, body {background: url("http://wallpapersus.com/wp-content/uploads/20
         .icon-glass
       .col-md-12
         .date
-          = Time.now.strftime("%d %B %Y")
+          input type="text" data-behaviour='datepicker' placeholder="#{Time.now.strftime("%d %B %Y")}"
+
 
     .drinks_input
       = form_for :user, url: add_drinks_url, html: { id: "drinksform" } do |f|
@@ -39,3 +40,8 @@ style html, body {background: url("http://wallpapersus.com/wp-content/uploads/20
               div class="form-group"
                 div class="col-md-12"
                   = f.submit "Add drinks", class: "btn btn-success col-md-12"
+
+javascript:
+  $(document).ready(function(){
+    $('[data-behaviour~=datepicker]').datepicker();
+  })
