--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,8 @@ html, body {
 /*  background-size:cover;*/
 }
 
+/**= require bootstrap-datepicker*/
+
 h1 {
   margin: 0;
   padding: 0;
@@ -31,6 +33,8 @@ h1 {
 .white_background{
   background: hsla(0, 0%, 100%, 0.9);
   width: 1000px;
+  margin-top: 100px;
+  border-radius: 20px;
 }
 
 .welcome {
@@ -98,7 +102,11 @@ legend {
 .date {
   text-align: center;
   margin-top: 50px;
-  font-size: 4em;
+  font-size: 3em;
+}
+
+input {
+  text-align: center;
 }
 
 .drinks_input{
@@ -130,3 +138,4 @@ legend {
   text-align: right;
   margin-right: 30px;
 }
+
