--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,6 +39,7 @@ h1 {
 
 .welcome {
   text-align: center;
+  font-size: 18px;
 }
 
 .form-control {
@@ -48,6 +49,7 @@ h1 {
     height: 40px;
     padding: 6px 15px;
     text-align: center;
+    font-size: 18px;
 }
 
 .form-group{
@@ -101,7 +103,7 @@ legend {
 
 .date {
   text-align: center;
-  margin-top: 50px;
+  margin-bottom: 20px;
   font-size: 3em;
 }
 
