--- a/app/views/drinks/results.html.slim
+++ b/app/views/drinks/results.html.slim
@@ -8,7 +8,7 @@
     .row
       .col-md-4
         .icon-beer
-        p Week 1 - #{current_user.binge.count}
+        p Week 1 - #{current_user.binge.distinct(:beer)}
 
       .col-md-4
         .icon-wine
