--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ body
       .container
         .pull-right
           = link_to "Log Out", logout_url, method: :delete, class: "btn btn-danger logout-link" if current_user
+          = link_to "Register", register_url, class: "btn btn-primary logout-link" if !current_user
         h1 class="navbar-brand" Drinkalculator
 
     == yield
