--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -115,6 +115,11 @@ input {
   margin-top: -100px;
 }
 
+.table{
+  text-align: left;
+}
+
+
 /*FOOTER*/
 /* Wrapper for page content to push down footer */
 #wrap {
