--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -29,7 +29,7 @@ style html, body {background: url("http://wallpapersus.com/wp-content/uploads/20
               .form-group
                 .col-md-6.col-md-offset-3
                   .date
-                    = f.text_field :date, class: "form-control input-md", value: "#{Time.now.strftime("%m/%d/%Y")}"
+                    = f.text_field :date, class: "form-control input-md", value: "#{Time.now.strftime("%-d/%m/%Y")}"
 
               .form-group
                 div class="col-md-4"
