--- a/app/views/drinks/results.html.slim
+++ b/app/views/drinks/results.html.slim
@@ -1,11 +1,13 @@
-/ style html, body {background: url("http://test.thailandemagazine.com/wp-content/uploads/2013/06/Baba-Nest-Phuket.jpg") no-repeat center center fixed; background-size:cover;}
+style html, body {background: url("http://farm9.staticflickr.com/8204/8237429748_216c68cda0_b.jpg") no-repeat center center fixed; background-size:cover;}
+
+
 
 .main.container role="main"
   div class="row"
     div class="col-md-4"
 
   div id="icons"
-    .row
+    .row.blur
       table class="table table-hover"
         thead
           tr
@@ -56,6 +58,7 @@
             td #{@total_wine_units}
             td #{@total_cocktail_units}
 
+    p.click_notice.deepshadow Click to take those beer googles off!
 
 javascript:
   $(document).ready(function(){
@@ -64,4 +67,26 @@ javascript:
 
   $('.collapsey').click(function () {
     $(this).nextUntil('tr.collapsey').slideToggle(100).promise()
+    $(".click_notice").addClass("hide");
   });
+  $("html").click(function(){
+    $(".row").removeClass("blur");
+    $(".click_notice").addClass("blur");
+  });
+
+javascript:
+  $(document).ready(function(){
+    var trip = new Trip([
+     {
+         sel : $('.info'),
+         position : 'screen-sw',
+         content : 'Click on each row to reveal more data',
+         delay : 3000,
+     }], {
+
+     });
+
+    $("html").on("click", function() {
+    trip.start();
+    });
+    });
