--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,10 @@ head
   link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet"
   = stylesheet_link_tag "application", media: "all"
   = stylesheet_link_tag "fontello", media: "all"
+  = stylesheet_link_tag "trip", media: "all"
   = javascript_include_tag "application"
+  = javascript_include_tag "trip"
+  = javascript_include_tag "trip-results"
   = csrf_meta_tags
   link href='http://fonts.googleapis.com/css?family=Revalia' rel='stylesheet' type='text/css'
 
