--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,6 +6,7 @@ head
   = stylesheet_link_tag "application", media: "all"
   = stylesheet_link_tag "fontello", media: "all"
   = stylesheet_link_tag "trip", media: "all"
+  link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
   = javascript_include_tag "application"
   = javascript_include_tag "trip"
   = csrf_meta_tags
